stable/cube-explorer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging.cubeexplorer.csopenportal.co.uk
  namespace: explorer
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-hostname: "staging.cubeexplorer.csopenportal.co.uk"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: dns01
spec:
  rules:
  - host: staging.cubeexplorer.csopenportal.co.uk
    http:
      paths:
      - path: /
        backend:
          service:
            name: cubeexplorer-datacube-dashboard
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - staging.cubeexplorer.csopenportal.co.uk
    secretName: ssl-staging-cubeexplorer-csopenportal-co-uk-tls
